<resources>
    <string name="app_name">Airdrops by WholeCrypto(Beta)</string>
    <string name="app_slogan">World\'s airdrops in one place, for free</string>

    <!--
    **********
    Activities
    **********
    -->

    <!-- Main Activity -->

    <!-- Main Toolbar -->
    <string name="main_toolbar_title">Airdrops</string>
    <string name="main_toolbar_beta_tag">BETA</string>
    <string name="main_toolbar_subtitle">by WholeCrypto</string>
    <string name="main_toolbar_slogan">World\'s airdrops in one place</string>

    <!-- Toolbar -->


    <!-- Main Activity -->


    <!--FAQ Airdrops-->
    <string name="faq_title">Airdrops FAQ</string>

    <string name="what_are_airdrops_title"><b>What are airdrops?</b></string>
    <string name="what_are_airdrops_body">Airdrops are a distribution of cryptocurrencies for free. \n new projects come out every once in a while, and developers want to
    get attention, attract investors and build a community for their project. Therefore they may decide to distribute a small amount of their token by doing different things to promote the marketing of their project</string>

    <string name="join_airdrop_title"><b>I want to join an airdrop, what do I need to do?</b></string>
    <string name="join_airdrop_body">Each project have their own airdrop requirements. some may require you to only join a telegram group,\n
    others may require you to like them on social media or fill an online form. It is important to note that some airdrops restrict their users, meaning that you can apply for the airdrop only if you meet a certain requirements.\nfor example,
    a project may require you to live in a certain country, like the USA.</string>

    <string name="tokens_purpose_title"><b>What can I do with tokens?</b></string>
    <string name="tokens_purpose_body">Your tokens worth money. you can either sell them upon receiving them in cryptocurrency exchanges that lists them or in person to any potential buyer\n
    You can wait until the tokens value will raise and sell them at a higher price, if you believe in the project</string>

    <string name="airdrop_reward_title"><b>How much tokens do I get?</b></string>
    <string name="airdrop_reward_body">Each airdrop will give you different amount of tokens. what is important is not the amount of tokens you get,\n
    but the total value of the tokens, so you get as much money as possible.</string>

    <string name="airdrop_scams_title"><b>Can I register to an airdrop and not get my tokens?</b></string>
    <string name="airdrop_scams_body">It is possible that you would fill the airdrop requirements and not get your tokens.\nhowever,by using this app, a few steps are taken to combat these scam airdrops:\n*all our airdrops are going through inspection process before published.\n*We encourage you to report a scam airdrop\n*We are also working on implementing different strategies to track airdrop rewards, so stay tuned.</string>

    <string name="app_ads_title"><b>How can I disable ads?</b></string>
    <string name="app_ads_body">We have made sure that ads in our app be with as little distraction as possible.\nIn the current version you can\'t disable ads,you will, however, be able to disable ads entirely in future releases</string>

    <!--FAQ Airdrops -->


    <!-- Terms Of Service -->

    <string name="terms_of_service_title">Terms Of Service</string>

    <!-- Terms Of Service -->


    <!--
    **********
    End of Activities
    **********
    -->


    <!--
    **********
    Fragments
    **********
    -->

    <!-- Publish Airdrop Fragment -->
    <string name="publish_airdrop_title">Publish New Airdrop</string>
    <string name="coin_name">Coin Name(e.g. Bitcoin)</string>
    <string name="coin_symbol">Coin Symbol(e.g. BTC)</string>
    <string name="airdrop_starting_date">Starting Date</string>
    <string name="airdrop_ending_date">Ending Date</string>
    <string name="airdrop_description_title">Airdrop Description</string>
    <string name="airdrop_description_hint">Join telegram, submit your code and complete an online form. Join here: "https://www.thisisasamplelink55.com"</string>
    <string name="airdrop_reward">Reward(e.g. 0.5 BTC)</string>
    <!-- Publish Airdrop Fragment -->

    <!-- Sales Page Fragment  -->
    <string name="exposure_fragment_title">Exposure</string>
    <string name="exposure_fragment_body">Reach out to thousands of <b>global</b> users</string>
    <string name="exposure_fragment_bottom">With a <b>fraction</b> of marketing budget</string>

    <string name="target_fragment_title">Target</string>
    <string name="target_fragment_body">Target users who are <b>interested</b> in cryptocurrencies projects</string>
    <string name="target_fragment_bottom">Our users are <b>validated</b> through phone-authentication</string>

    <string name="trust_fragment_title">Trust</string>
    <string name="trust_fragment_body">We only publish projects that passed inspection</string>
    <string name="trust_fragment_bottom">Users will identify your project as a <b>trusty</b></string>

    <string name="price_fragment_title">Price</string>
    <string name="price_fragment_body">Investing in a top ICO platform will payback your efforts in fundraising</string>

    <string name="support_fragment_title">Support</string>
    <string name="support_fragment_body">Full customer service support 24/7</string>
    <string name="support_fragment_bottom">To ensure your satisfaction</string>


    <string name="list_your_airdrop">List Your Airdrop</string>

    <!-- Sales Page Fragment -->


    <!-- Airdrop Registration Fragment -->
    <string name="contact_email">Email for Contact</string>
    <string name="new_form_header">If you don\'t know some form, leave it blank</string>
    <string name="note_header">Please note: do not close the app while editing this form, it will erase your data.</string>
    <string name="is_premium">Premium Airdrop?</string>
    <string name="ico_name">Project name:</string>

    <string name="all_links">Link URLs:(for every link do a line-break)</string>
    <string name="all_links_hint">
        Website: www.mywebsite.com\n
        White Paper:www.mywebsite.com/whitepaper\n
        BitcoinTalk: www.bitcointalk.org\n
        Telegram: t.me/OurTelegram\n
        Our Bounty: www.mywebsite.com/bounty\n
        Blog: www.mywebsite.com/blog
        Facebook: www.facebook.com/ourproject
    </string>

    <string name="country_of_operation">Country of Operation</string> <!-- TODO: // NEED TO ADD THIS PART -->
    <string name="project_category">Project Category:</string>
    <string name="airdrop_dates">Airdrop Dates:</string>
    <string name="token_symbol">Token Symbol</string>
    <string name="token_symbol_hint">i.e. SHIP,ETH,EOS,BTC</string>

    <string name="blockchain_platform">Associated Blockchain Platform</string> <!-- TODO: // NEED TO ADD THIS PART -->

    <string name="token_amount">Tokens Distributed in Airdrop</string>
    <string name="token_amount_hint">50(EOS)</string>
    <string name="price_per_token">Price per 1 token in USD (e.g. 1 NEW = 0.1$)  </string>
    <string name="price_per_token_hint">(e.g. 1 NEW = 0.1$)</string>
    <string name="kyc_or_whitelist">KYC or Whitelist?</string>
    <string name="restrictions">Any restrictions in who can participate?</string>
    <string name="restrictions_hint">e.g. USA Citizens only</string>
    <string name="about">Tell about your project</string>

    <string name="about_hint">Bitcoin is a consensus network that enables a new payment system and a completely\n
        digital money. It is the first decentralized peer-to-peer payment network that is\n
        powered by its users with no central authority or middlemen. From a user perspective, Bitcoin is pretty much\n
        like cash for the Internet. Bitcoin can also be seen as the most prominent triple entry\n
        bookkeeping system in existence.</string>
    <string name="claim_instructions">How to claim the airdrop:</string>
    <string name="claim_instructions_hint">
        1. Join our telegram group at: t.me/OurTelegram\n
        2. Fill out this online form on our website: www.mywebsite.com/online-form\n
        3. Like us on facebook: www.facebook.com/ourproject
    </string>

    <string-array name="project_category">

        <item> Finance </item>
        <item>Payments/Wallets</item>
        <item>Commerce/Retail</item>
        <item>Asset Management</item>
        <item>Blockchain Platform</item>
        <item>Data/Computing/AI</item>
        <item>Gaming/AR/VR</item>
        <item>Betting/Gambling</item>
        <item>Media/Content</item>
        <item>Prediction Market</item>
        <item>Entertainment</item>
        <item>IoT</item>
        <item>Drugs/Health</item>
        <item>Security/Identity</item>
        <item>Funding/VC</item>
        <item>Content/Advertising</item>
        <item>Jobs/Marketplace</item>
        <item>Real Estate</item>
        <item>Network/Communications</item>
        <item>Industry/Logistics</item>
        <item>Social Network</item>
        <item>Transportation</item>
        <item>Energy/Utilities</item>
        <item>Crypto Mining</item>
        <item>Education</item>
        <item>Insurance</item>
        <item>Management Systems</item>
        <item>Travel</item>
        <item>Music/Arts</item>
        <item>Sports</item>

    </string-array>
    <string-array name="kyc_or_whitelist">
        <item>None</item>
        <item>KYC and Whitelist</item>
        <item>KYC only</item>
        <item>Whitelist only</item>
    </string-array>


    <!-- Airdrop Registration Fragment -->

    <!-- Active Airdrops Fragment -->
    <string name="active_airdrops">Active Airdrops</string>
    <!-- Active Airdrops Fragment -->


    <!-- Upcoming Airdrops Fragment -->
    <string name="upcoming_airdrops">Upcoming Airdrops</string>
    <!-- Upcoming Airdrops Fragment -->


    <!--
    **********
    End of Fragments
    **********
    -->


    <!--
   **********
   Others (Menus,Navigation,etc)
   **********
   -->

    <!--Navigation Menu Top -->
    <string name="nav_airdrops">Airdrops</string>
    <string name="nav_my_portfolio">My Portfolio</string>
    <string name="nav_list_airdrop">List Airdrop</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_block_ads">Block Ads</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_category_contact">Contact</string>
    <string name="nav_contact">Contact Us</string>
    <string name="nav_terms_of_service">Terms of Service</string>
    <string name="nav_logout">Log Out</string>

    <!-- Required Strings for the navigation drawer. used for accessibility and add the hamburger icon -->
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>


    <!-- Error Messages -->
    <string name="version_unavailable">Unavailable in this version</string>
    <string name="data_unavailable">unavailable</string>

    <!-- Error Messages -->

    <!--
    **********
    End of Others (Menus,Navigation,etc)
    **********
    -->


</resources>
