<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_airdrops"
            android:title="@string/nav_airdrops"
            android:checked="true"
            android:icon="@drawable/ic_airdrops"/>



                <item
                    android:id="@+id/nav_faq"
                    android:title="@string/nav_faq"
                    android:icon="@drawable/ic_faq"
                    android:checkable="false"/>
<!--
        <item
            android:id="@+id/nav_portfolio"
            android:title="@string/nav_my_portfolio"
            android:icon="@drawable/ic_profile"
            android:checkable="false"/>

                <item
                android:id="@+id/nav_notifications"
                android:title="@string/nav_notifications"
                android:icon="@drawable/ic_notifications_on"
                android:checkable="false"/>

                <item
                    android:id="@+id/nav_block_ads"
                    android:title="@string/nav_block_ads"
                    android:icon="@drawable/ic_block_ads"
                    android:checkable="false"/>

                    -->

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_list_airdrop"
            android:title="@string/nav_list_airdrop"
            android:icon="@drawable/ic_list_airdrop"
            android:checkable="false"/>


    </group>


            <group
                android:id="@+id/menu_communication"
                android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_terms_of_service"
                    android:title="@string/nav_terms_of_service"
                    android:icon="@drawable/ic_terms_of_service"
                    android:checkable="false"/>

                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:checkable="false"/>

            </group>









</menu>